--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,38 +3,45 @@ server:
     port: 4000
 spring:
     datasource:
-
         url: jdbc:mysql://localhost:3306/springboot-db?useSSL=false
-
         username: root
-
         password: "!qaz2wsx"
-
         driver-class-name: com.mysql.cj.jdbc.Driver
-
         sql-script-encoding: UTF-8
-
+        druid:
+            initial-size: 5
+            max-active: 20
+            min-idle: 10
+            max-wait: 10
+            web-stat-filter:
+                enable: true
+                url-pattern: /*
+                execlusions: "*.gif,*.png,*.jpg,*.html,*.js,*.css,*.ico,/druid/*"
+            stat-view-servlet:
+                enable: true
+                url-pattern: /druid/*
+                reset-enable: true
+                login-username: admin
+                login-password: admin
+                allow:
+                deny:
     jpa:
-
         properties:
-
             hibernate:
-
                 dialect: org.hibernate.dialect.MySQL57Dialect
-
         hibernate:
-
             ddl-auto: update
-
-
+    security:
+        user:
+            name: "a"
+            password: "a"
+mybatis-plus:
+    global-config:
+        db-config:
+            db-type: mysql
 logging:
-
     level:
-
         org:
-
             hibernate:
-
                 SQL: DEBUG
-
                 type: TRACE
