--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,13 @@
 			<optional>true</optional>
 		</dependency>
 
+		<!--Configuraion-->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-configuration-processor</artifactId>
+			<optional>true</optional>
+		</dependency>
+
 
 		<!--jpa ORM-->
 		<dependency>
