--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,6 @@
-
-server:
-    port: 4000
 spring:
+    profiles:
+        active: prod
     datasource:
         url: jdbc:mysql://localhost:3306/springboot-db?useSSL=false
         username: root
@@ -49,3 +48,25 @@ myperson:
     name: Adam
     age: 34
     say: Hello world config
+
+---
+
+server:
+    port: 4000
+spring:
+    profiles: prod
+---
+
+server:
+    port: 4001
+spring:
+    profiles: dev
+
+---
+
+server:
+    port: 4002
+spring:
+    profiles: test
+
+---
